Made several modifications to ensure asynchronous execution

--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -27,7 +27,7 @@
       </div>
       </div>
     </div>
-    <div class="container" style="padding-top: 80px;">
-      <app-list></app-list>
+    <div class="container text-center" style="padding-top: 80px;">
+      <h2><a routerLink="/upload">List</a></h2>
   </div>
   </div>
