--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -1,5 +1,9 @@
 <div class="row">
-<div class="col-md-4" *ngIf="show" *ngFor="let datum of data" style="margin: 20px 0;">
+<div class="row">
+    <a routerLink="/home">List</a>
+</div>
+<div class="row" *ngIf="show">
+<div class="col-md-4"  *ngFor="let datum of data" style="margin: 20px 0;">
     <div class="card">
         <div class="card-title text-center">
             <h4>{{ datum.title }}</h4>
@@ -15,7 +19,9 @@
         <button class="btn btn-danger" (click)="deleteCall(datum.id)">Delete</button>
     </div>
 </div>
-<div class="col-md-4" *ngIf="!show" *ngFor="let datum of display" style="margin: 20px 0;">
+</div>
+<div class="row" *ngIf="!show">
+<div class="col-md-4" *ngFor="let datum of display" style="margin: 20px 0;">
     <div class="card">
         <div class="card-title text-center">
             <h4>{{ datum.title }}</h4>
@@ -30,8 +36,9 @@
         </div>
         <button class="btn btn-danger" (click)="deleteCall(datum.id)">Delete</button>
     </div>
+</div>
 </div>
 <div class="row">
-    <a (click) = "openList($event)"> Queue - {{ data.length - index }} </a>
+    <button (click) = "openList($event)" *ngIf="showButton()"> Queue - {{ data.length - index }} </button>
 </div>
 </div>
