--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -1,8 +1,8 @@
 <div class="row">
-<div class="row">
+<div class="row text-center">
     <a routerLink="/home">List</a>
 </div>
-<div class="row" *ngIf="show">
+<div class="row mx-auto" *ngIf="show">
 <div class="col-md-4"  *ngFor="let datum of data" style="margin: 20px 0;">
     <div class="card">
         <div class="card-title text-center">
@@ -20,7 +20,7 @@
     </div>
 </div>
 </div>
-<div class="row" *ngIf="!show">
+<div class="row mx-auto" *ngIf="!show">
 <div class="col-md-4" *ngFor="let datum of display" style="margin: 20px 0;">
     <div class="card">
         <div class="card-title text-center">
