Removed stray console logs from the list component

--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -42,6 +42,6 @@
     <button (click) = "openList($event)" *ngIf="!showButton()"> Collapse </button>
 </div>
 <div class="col-md-12 text-center" style="padding-top: 70px;">
-    <a routerLink="/home"><h1>List</h1></a>
+    <a routerLink="/home"><h1>Upload</h1></a>
 </div>
 </div>
